syntax = "proto3";

option csharp_namespace = "GrpcGreeting";

service GreetingService {
    rpc GetGreeting (GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
    string name = 1;
}

message GreetingResponse {
    string message = 1;
}
